<resources>
    <string name="app_name">Calculator</string>
    <string name="text">""</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="pi">Pi</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="x">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="minus">-</string>
    <string name="ac">AC</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="equals">=</string>
    <string name="division_by_zero">Division by zero!</string>
    <string name="incorrect_number_format">Incorrect number format!</string>
    <string name="invalid_expression">Invalid expression!</string>
    <string name="error">Error!</string>
</resources>